--- a/Front/src/compenents/utils/WarningBox/WarningBox.css
+++ b/Front/src/compenents/utils/WarningBox/WarningBox.css
@@ -4,7 +4,7 @@
   }
 
 .warning-box {
-	position: fixed;
+	position: absolute;
 	top: 5%;
 	left: 10%;
 	right: 10%;
@@ -48,12 +48,12 @@
 #move_on {
 	background-image: url("../../../img/buttons/move_on.png");
 	background-size: cover;
-	width: 150px;
-	height: 150px;
+	width: 100px;
+	height: 100px;
 	font-size: 2rem;
-	position: fixed;
-	bottom: 6%;
-	right: 15%;
+	position: absolute;
+	bottom: 50px;
+	right: 50px;
 	z-index: 50;
 
     background-color: rgba(0, 0, 255, 0);
@@ -72,13 +72,13 @@
 	}
 }
 
-@media (max-width: 850px) {
+@media (max-width: 1200px) {
 	#attention {
-		font-size: 50px;
+		font-size: 70px;
 	}
 	#message {
-		font-size: 20px;
-		line-height: 30px;
+		font-size: 25px;
+		line-height: 1.2em;
 	}
 }
 
