--- a/Front/src/compenents/Chat/Channels/Channels.css
+++ b/Front/src/compenents/Chat/Channels/Channels.css
@@ -105,16 +105,28 @@
 }
 
 .channel-group-convo {
-	height: 100%;
-	width: 66%;
+	height: 98%;
+	width: 64%;
+	margin-top: 2%;
+	margin-left: 2%;
+	padding-top: 2%;
+	padding-bottom: 2%;
 	display: flex;
 	flex-direction: column;
+	border-radius: 3px;
+	/* background-color: rgb(187, 187, 187); */
+	background-color: rgba(228, 222, 222, 0.5);
+
 }
 
 .channel-members-presentation {
-	width: 100%;
+	width: 94%;
 	height: 7%;
-	background-color: #f4edb7;
+	margin-left: 3%;
+	margin-right: 3%;
+	/* background-color: #f7eeb1; */
+	background-color: rgba(247,238,177, 0.9);
+	font-size: 8px;
 	/* background-color: black; */
 }
 
@@ -122,7 +134,6 @@
 	width: 94%;
 	margin-left: 3%;
 	margin-right: 3%;
-	margin-top: 5%;
 	height: 93%;
 	background-color: #E7E8F3;
 	overflow-y: auto;
@@ -138,7 +149,7 @@
 	flex-direction: column;
 	font-size: 10px;
 	list-style: none;
-	margin: 0;
+	margin-left: 3%;
 	padding: 0;
 }
 
@@ -150,22 +161,23 @@
 }
 
 .channel-conversation-messages ul li {
-	padding: 5px;
-	margin: 5px 0;
 	word-wrap: break-word;
 	/* Allow long words to break onto a new line */
 	max-width: 80%;
 	/* Limit message width */
 	clear: both;
 	font-size: 16px;
+	margin-top: 0%;
 	/* Adjust the font size as needed */
-	margin-left: 20px;
+	margin-left: 6%;
 	/* Add left margin for indentation */
 }
 
 .channel-profile-pic-and-member-list {
-	height: 100%;
-	width: 34%;
+	height: 98%;
+	margin-top: 1%;
+	margin-left: 2%;
+	width: 30%;
 	/* background-color: orange; */
 }
 
@@ -201,7 +213,8 @@
 }
 
 .channel-group-member-list {
-	height: 60%;
+	height: 64%;
+	margin-top: 2%;
 	width: 100%;
 	/* background-color: orange;e */
 	justify-content: center;
@@ -250,6 +263,8 @@
 	/* background-color: #e4e7ec; */
 	/* opacity: 45%; */
 	display: flex;
+	padding-left: 2%;
+	padding-right: 2%;
 	flex-direction: row;
 }
 
@@ -354,10 +369,10 @@ span.textarea[contenteditable]:empty::before {
 	/* Darker blue on hover */
 }
 
-
 .channel-my-profile-pic-main-container {
 	width: 34%;
 	height: 100%;
+	margin-top: 5%;
 	/* background-color: #a2acc6; */
 	/* background-color: orange; */
 	border-radius: 15px;
