--- a/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
+++ b/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
@@ -56,10 +56,8 @@
 	height: 400px;
 	transform: translate(-50%, -50%);
 	flex-direction: column;
-	align-items: center;
 	padding: 0;
 	margin: 0;
-	/* padding: 20px; */
 	background-color: #E9E8D7;
 	/* Lighter beige background color */
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -74,63 +72,107 @@
 	height: 9%;
 	background-color: #0057e9;
 	display: flex;
-	flex-direction: row-reverse;
+	flex-direction: row;
+	justify-content: flex-end;
 	align-items: center;
+	list-style: none;
+}
+
+.create-channel-title {
+	flex: 1; /* Take available space */
+    font-family: 'YourCustomFont', Tahoma, Geneva, Verdana, sans-serif; /* Use your custom font */
+    font-size: 1rem; /* Adjust font size as needed */
+    font-weight: bold; /* Adjust font weight as needed */
+    color:white;
 }
 
 .channel-creation-navbar img {
-    width: 50px;
-    height: 50px;
+	padding: 0;
+	margin: 0;
+    width: 30px;
+    height: 30px;
 }
 
 .channel-creation-form {
-	height: 92%;
-	margin-bottom: 20px;
+	margin: 0;
+	padding:0;
+	height: 91%;
 	width: 100%;
+	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
+	justify-content: center;
 }
 
-.channel-creation-form input {
+.channel-creation-input {
+	height: 33%;
 	width: 100%;
-	/* padding: 10px; */
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	font-size: 16px;
-	margin-bottom: 10px;
-}
-
-.fiiiirst {
-	height: 20%;
-	width: 80%;
-	margin-left: 10%;
-	background-color: green;
 	display: flex;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: space-between;
 	align-items: center;
 }
 
-.checkboxes-tick {
-	width: 80%;
-	height: 20%;
-	margin-left: 10%; 
-	background-color: purple;
+.ze-input {
+	width: 40%;
+}
+
+.channel-creation-options {
+	height: 30%;
+	margin-bottom: 10%;
+	width: 94%;
+	padding:0;
+	/* margin-left: 3%; */
+	border-width: 1px;
+	border-style: solid;
+	border-color: grey;
 	display: flex;
-	justify-content: space-between;
+	flex-direction: column;
+}
+
+.channel-creation-options h1 {
+	margin-bottom: 7%;
+	font-style: normal;
+	margin-top: 3%;
+}
+
+.round-label {
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	width: 24px; /* Set the width and height for the round label */
+	height: 24px;
+	border-radius: 50%;
+	background-color: #007bff;
+	color: white;
+	cursor: pointer;
+  }
+.channel-creation-options div {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.channel-creation-buttons {
+	height: 27%;
+	width: 100%;
+}
+
+.channel-creation-border {
+	padding: 0%;
+	border-top: 20%;
+	height:80%;
+	width: 80%;
+	border-width: 1px;
+	border-style: solid;
+	border-color: black;
+	background-color: #ffffff;
 }
 
 .checkboxes-tick input[type="checkbox"] {
 	/* margin-right: 20px; */
   }
-
-.channel-creation-container input {
-	width: 100%;
-	padding: 10px;
-	margin-bottom: 10px;
-	border: 1px solid #ccc;
-	border-radius: 4px;
-}
 
 .channel-creation-container button {
 	background-color: #f5e1b2;
