--- a/Front/src/compenents/Profile/Profile.css
+++ b/Front/src/compenents/Profile/Profile.css
@@ -93,17 +93,17 @@
 	position: relative;
 	height: 80vh;
 	width: 50vw;
-	gap: 20px;
+	gap: 50px;
 }
 
 #profile-hardly-brothers {
 	background-image: url("../../img/Hardly-boys.png");
 	background-size: cover;
-	height: 12vh;
+	height: 11vh;
 	width: 10vw;
 
 	position: absolute;
-	top: 10px;
+	/* top: 10px; */
 	left: 30px;
 }
 
@@ -228,7 +228,7 @@
 /******   HISTORIQUE   *********/
 
 #profile-jimbo {
-	height: 150px;
+	height: 155px;
 	width: 140px;
 
 	position: absolute;
