--- a/Front/src/compenents/searchBar/searchBar.css
+++ b/Front/src/compenents/searchBar/searchBar.css
@@ -6,12 +6,13 @@
 
 .searchBar-input[type="text"] {
 	font-size: 16px;
-	margin-left: 10%;
-	width: 60%;
+	/* margin-left: 10%; */
+	width: 75%;
 	border: 1px solid #ccc;
+	margin-bottom: 7vh;
 }
 .searchBar-button {
-	width: 30%;
+	width: 50%;
 	height: 100%;
 	font-size: 12px;
 	background-color: #84adda;
@@ -19,6 +20,8 @@
 	border: none;
 	cursor: pointer;
 	overflow: hidden;
+	margin-bottom: 7vh;
+	margin-left: 1vw;
 }
 
 .searchBar-button:hover {
