--- a/Front/src/compenents/UserProfile/UserProfile.css
+++ b/Front/src/compenents/UserProfile/UserProfile.css
@@ -88,17 +88,17 @@
 	position: relative;
 	height: 80vh;
 	width: 50vw;
-	gap: 20px;
+	gap: 50px;
 }
 
 #user-hardly-brothers {
 	background-image: url("../../img/Hardly-boys.png");
 	background-size: cover;
-	height: 12vh;
+	height: 11vh;
 	width: 10vw;
 
 	position: absolute;
-	top: 10px;
+	/* top: 10px; */
 	left: 30px;
 }
 
