--- a/Front/src/compenents/Connexion/Connexion.css
+++ b/Front/src/compenents/Connexion/Connexion.css
@@ -8,6 +8,10 @@ body {
 	margin: 0;
 }
 
+#iframeAudio {
+  display: none;
+}
+
 	  /* A CORRIGER POUR LE RESPONSIVE */
   /* @media only screen and (max-width: 768px) {
 	body {
@@ -17,6 +21,7 @@ body {
 
 #menu {
 	height: 100vh;
+  width: 100vw;
 	display: flex;
 	align-items: center;
 }
