--- a/Front/src/compenents/utils/WarningBox/WarningBox.css
+++ b/Front/src/compenents/utils/WarningBox/WarningBox.css
@@ -55,6 +55,7 @@
 	bottom: 50px;
 	right: 50px;
 	z-index: 50;
+    cursor: pointer;
 
     background-color: rgba(0, 0, 255, 0);
     border: 1px solid rgba(0, 0, 255, 0);
